update files for netlify host

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,5 @@ title: "YAYImages - HTML Template - Search Page"
 ---
 
 <main>
-  <div class="page-with-sidebar open flex">
-    {% include "searchpage-aside.html" %} {% include "searchpage-content.html"
-    %}
-  </div>
+  <div class="h-80 flex items-center justify-center">Index</div>
 </main>
